rewrite project documentation