@@ -1,198 +1,298 @@
-<div align="center">
+![Javuk Code](./javuk.png)
 
-# ⚡ Javuk
+# Javuk
 
-**A terminal coding agent, built from scratch in Java.**
+Javuk is a terminal-based coding agent implemented in Java. It accepts natural-language
+development tasks, sends them to a configured language model, and can read files, edit
+code, search a workspace, run shell commands, fetch web content, and delegate focused
+tasks to subagents.
 
-Javuk is an LLM-powered coding assistant for your terminal — it reads and edits
-your files, runs commands, and works through multi-step tasks using tool calls,
-with live streaming output and a permission system that keeps you in control.
+The project supports an interactive REPL and a non-interactive one-shot mode. It began
+as an implementation of the CodeCrafters "Build your own Claude Code" challenge.
 
-[![CI](https://github.com/UsmanovMahmudkhan/codecrafters-claude-code-java/actions/workflows/ci.yml/badge.svg)](https://github.com/UsmanovMahmudkhan/codecrafters-claude-code-java/actions/workflows/ci.yml)
-[![Java 25](https://img.shields.io/badge/Java-25-orange.svg)](https://openjdk.org/projects/jdk/25/)
-[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)
-[![progress-banner](https://backend.codecrafters.io/progress/claude-code/660b9887-4384-4aba-8ffb-2e652908bfd0)](https://app.codecrafters.io/users/UsmanovMahmudkhan?r=2qF)
+## Project Overview
 
-</div>
+Javuk runs an agent loop that streams model responses, executes requested tools, returns
+tool results to the model, and continues until the model produces a final response.
+Interactive sessions include permission controls for mutating tools, persistent sessions,
+custom commands, project context files, hooks, and Model Context Protocol (MCP) tools.
 
-```
-  _                   _
- | | __ ___   __ _   _| | __
- | |/ _` \ \ / / | | | |/ /     javuk> refactor the parser and run the tests
- | | (_| |\ V /| |_| |   <      ● Reading src/Parser.java …
- |_|\__,_| \_/  \__,_|_|\_\     ⚙ Edit Parser.java   ⚙ Bash mvn -q test  ✓ 31 passing
-```
+For an implementation overview, see [docs/ARCHITECTURE.md](docs/ARCHITECTURE.md).
 
-> Started as the [CodeCrafters "Build your own Claude Code"](https://codecrafters.io/challenges/claude-code)
-> challenge and grew into a full, tested agent platform.
+## Key Features
 
----
+- Interactive REPL with command history, streamed output, slash commands, and cancellable turns
+- One-shot prompt execution for scripts and CodeCrafters compatibility
+- Eleven built-in tools: `Read`, `Write`, `Edit`, `MultiEdit`, `Bash`, `Glob`, `Grep`,
+  `List`, `TodoWrite`, `WebFetch`, and `Task`
+- Permission modes for interactive sessions: `ask`, `auto`, and `plan`
+- Edit previews before interactive approval of mutating actions
+- Parallel execution when all tool calls in a batch are read-only
+- Workspace confinement and private-network fetch protection by default
+- OpenRouter, OpenAI, Ollama, custom OpenAI-compatible endpoints, and native Anthropic support
+- Native Anthropic tool use and prompt caching
+- MCP server connections over stdio or HTTP/SSE
+- Persistent sessions, token usage, and estimated cost reporting
+- Pre-tool and post-tool shell hooks
+- Project-specific commands from `.javuk/commands/*.md`
+- Automatic context loading from `JAVUK.md`, `AGENTS.md`, or `CLAUDE.md`
 
-## Features
+## Technology Stack
 
-- 🔁 **Agentic loop** — the model plans, calls tools, reads the results, and keeps going until the task is done.
-- 🌊 **Live streaming** — responses stream token-by-token; tool calls are accumulated and executed as they arrive.
-- 🧰 **11 built-in tools** — Read, Write, Edit, MultiEdit, Bash, Glob, Grep, List, TodoWrite, WebFetch, and **Task**.
-- 🧬 **Subagents** — the `Task` tool delegates focused subtasks to nested agents with their own context.
-- 🔌 **MCP support** — connect [Model Context Protocol](https://modelcontextprotocol.io) servers and use their tools alongside the built-ins.
-- ⚡ **Parallel tools** — independent read-only tool calls in one turn run concurrently (virtual threads).
-- 🔍 **Diff previews** — file edits show a coloured diff in the permission prompt before they apply.
-- 🛡️ **Permissions + allowlist** — `ask` / `auto` (`--yolo`) / `plan`, plus persistent `/allow` patterns.
-- 🪝 **Hooks** — run shell commands before/after every tool; a failing pre-hook blocks the call.
-- 💬 **Interactive REPL** — JLine history & editing, slash commands, `@file` mentions, and **Ctrl-C cancels a running turn**.
-- 🧩 **Custom commands** — drop `.javuk/commands/*.md` prompt templates and call them as `/name`.
-- 🧠 **Project context** — automatically loads `JAVUK.md` / `AGENTS.md` / `CLAUDE.md` into the system prompt.
-- 💾 **Sessions** — save, list, resume transcripts; `/compact` summarizes to free up context.
-- 🌐 **Multi-provider** — OpenRouter (default), OpenAI, or a local Ollama server — anything OpenAI-compatible.
-- 💵 **Cost & token tracking** — live usage and an estimated session cost.
-- ✅ **Tested** — 41 JUnit tests; CI builds on every push.
+| Component | Technology |
+|---|---|
+| Language and runtime | Java 25 with preview features |
+| Build system | Maven |
+| Command-line parsing | picocli |
+| Interactive terminal | JLine |
+| Model providers | OpenAI Java SDK and Anthropic Java SDK |
+| MCP integration | Official MCP Java SDK |
+| JSON processing | Jackson |
+| Testing | JUnit 5 |
 
-## Quickstart
+## Installation
 
-**Requirements:** JDK 25 and Maven.
+### Requirements
+
+- JDK 25
+- Maven 3
+- An API key for a hosted provider, or a running local Ollama server
+
+Clone and build the project:
 
 ```sh
-# 1. Get an API key (OpenRouter shown; OpenAI / Ollama also supported)
-export OPENROUTER_API_KEY="sk-or-..."
-
-# 2. Build
+git clone https://github.com/UsmanovMahmudkhan/codecrafters-claude-code-java.git
+cd codecrafters-claude-code-java
 mvn -B package
-
-# 3. Run the interactive REPL
-java --enable-preview -jar target/codecrafters-claude-code.jar
-
-# …or one-shot
-java --enable-preview -jar target/codecrafters-claude-code.jar -p "create a hello.txt with a greeting"
 ```
+
+The build creates an executable jar at:
+
+```text
+target/codecrafters-claude-code.jar
+```
+
+Configure a provider before starting Javuk. OpenRouter is the default:
+
+```sh
+export OPENROUTER_API_KEY="your-api-key"
+```
+
+Other supported provider keys are `OPENAI_API_KEY` and `ANTHROPIC_API_KEY`. Ollama does
+not require a real API key.
 
 ## Usage
 
-```
-javuk [options]
+Start the interactive REPL:
 
-  -p <prompt>           Run a single prompt and print the answer (non-interactive)
-  --model <id>          Model id, e.g. anthropic/claude-haiku-4.5
-  --provider <name>     openrouter (default) | openai | ollama
-  --base-url <url>      Custom OpenAI-compatible endpoint (overrides --provider)
-  --yolo                Auto-approve all tool actions
-  --readonly, --plan    Block all mutating tools
-  --resume [id]         Resume a saved session (most recent if no id)
-  -h, --help            Show help
+```sh
+java --enable-preview --enable-native-access=ALL-UNNAMED \
+  -jar target/codecrafters-claude-code.jar
 ```
 
-### REPL slash commands
+Run a single prompt:
 
-| Command | Description |
+```sh
+java --enable-preview --enable-native-access=ALL-UNNAMED \
+  -jar target/codecrafters-claude-code.jar \
+  -p "Review the source code and summarize the main packages."
+```
+
+One-shot mode is non-interactive and automatically permits requested tool actions. Use it
+only in a workspace where those actions are acceptable.
+
+### Command-Line Options
+
+```text
+-p <prompt>                  Run one prompt non-interactively
+--model <id>                 Select a model
+--provider <name>            Select openrouter, openai, ollama, or anthropic
+--base-url <url>             Use a custom OpenAI-compatible endpoint
+--yolo                       Automatically approve tool actions
+--readonly, --plan           Block mutating tools
+--resume [id]                Resume a saved session, or the most recent session
+--allow-private-fetch        Allow WebFetch to access private or internal hosts
+--allow-outside-workspace    Allow file and search tools outside the working directory
+-h, --help                   Show command help
+```
+
+### Interactive Commands
+
+| Command | Purpose |
 |---|---|
-| `/help` | Show all commands |
-| `/model [id]` | Show or switch the model |
+| `/help` | Show interactive commands |
+| `/model [id]` | Show or change the current model |
 | `/models` | List models with known pricing |
 | `/tools` | List available tools |
-| `/permissions [mode]` | Show or set permission mode (`ask`/`auto`/`plan`) |
-| `/allow <pattern>` · `/allowed` | Always-allow patterns (persisted) |
-| `/save [id]` · `/load <id>` · `/sessions` | Manage saved sessions |
-| `/compact` | Summarize the conversation to free up context |
-| `/commands` | List custom commands from `.javuk/commands/` |
-| `/cost` · `/tokens` | Usage and estimated cost |
-| `/clear` | Clear the conversation (keeps system prompt) |
-| `/exit` | Quit |
+| `/permissions [mode]` | Show or set `ask`, `auto`, or `plan` mode |
+| `/allow <Tool>[: prefix]` | Persistently allow matching actions |
+| `/allowed` | List persisted allow rules |
+| `/save [id]`, `/load <id>`, `/sessions` | Manage sessions |
+| `/compact` | Replace conversation history with a generated summary |
+| `/commands` | List project-specific commands |
+| `/cost`, `/tokens` | Show usage information |
+| `/clear` | Clear the current conversation |
+| `/exit` | Exit the REPL |
 
-Type `@path/to/file` in any prompt to inline that file's contents. Press
-**Ctrl-C** during a response to cancel just that turn.
+Use `@path/to/file` in a prompt to include a readable file as context. Press `Ctrl-C`
+during a running turn to cancel that turn.
 
-## Tools
+## Project Structure
 
-| Tool | What it does |
-|---|---|
-| **Read** | Read a file with line numbers (supports `offset`/`limit`) |
-| **Write** | Create/overwrite a file (creates parent dirs) |
-| **Edit** | Exact-string replace with a uniqueness guard |
-| **MultiEdit** | Apply several edits to one file, all-or-nothing |
-| **Bash** | Run a shell command (timeout + output cap) |
-| **Glob** | Find files by glob pattern |
-| **Grep** | Search file contents by regex |
-| **List** | List a directory |
-| **TodoWrite** | Track a multi-step task list |
-| **WebFetch** | Fetch a URL as plain text |
-| **Task** | Delegate a subtask to a nested sub-agent |
-
-Plus any tools exposed by connected **MCP servers** (namespaced `server__tool`).
+```text
+src/main/java/Main.java              Application entry point
+src/main/java/dev/javuk/agent/       Agent loop, conversations, and subagents
+src/main/java/dev/javuk/cli/         CLI, REPL, slash commands, and file mentions
+src/main/java/dev/javuk/config/      Configuration loading and runtime settings
+src/main/java/dev/javuk/hooks/       Pre-tool and post-tool hooks
+src/main/java/dev/javuk/llm/         Provider clients, models, and usage tracking
+src/main/java/dev/javuk/mcp/         MCP connections and tool adapters
+src/main/java/dev/javuk/permission/  Permission modes and persistent allowlist
+src/main/java/dev/javuk/session/     Session persistence
+src/main/java/dev/javuk/tools/       Built-in tool implementations and registry
+src/main/java/dev/javuk/ui/          Terminal rendering
+src/test/java/                       JUnit test suite
+docs/ARCHITECTURE.md                 Architecture documentation
+```
 
 ## Configuration
 
-Precedence: **defaults < config file < environment < CLI flags**.
+Configuration precedence is:
 
-Config file (`~/.config/javuk/config.json` or project `./.javuk/config.json`):
+```text
+defaults < user config < project config < environment variables < CLI options
+```
+
+Javuk reads user configuration from `~/.config/javuk/config.json` and project
+configuration from `./.javuk/config.json`.
 
 ```json
 {
-  "model": "anthropic/claude-sonnet-4.6",
+  "provider": "anthropic",
+  "model": "claude-sonnet-4-6",
   "permissionMode": "ask",
+  "webFetch": {
+    "allowPrivateHosts": false
+  },
+  "workspace": {
+    "allowOutside": false
+  },
   "hooks": {
-    "preTool": ["echo \"$JAVUK_TOOL\" >> ~/.javuk-audit.log"],
+    "preTool": [],
     "postTool": []
   },
   "mcpServers": {
-    "filesystem": { "command": "npx", "args": ["-y", "@modelcontextprotocol/server-filesystem", "."] }
+    "filesystem": {
+      "command": "npx",
+      "args": ["-y", "@modelcontextprotocol/server-filesystem", "."]
+    },
+    "remote": {
+      "url": "https://example.com/mcp"
+    }
   }
 }
 ```
 
-- **hooks** — `preTool` commands run before each tool (a non-zero exit blocks it);
-  `postTool` run after. The tool name and JSON args are in `$JAVUK_TOOL` / `$JAVUK_TOOL_ARGS`.
-- **mcpServers** — launched on REPL start; their tools appear as `server__tool`.
-- **Custom commands** — Markdown files in `.javuk/commands/` become `/name`; `$ARGUMENTS` is substituted.
+Supported environment variables:
 
-Environment: `OPENROUTER_API_KEY` / `OPENAI_API_KEY`, `OPENROUTER_BASE_URL`,
-`JAVUK_MODEL`, `JAVUK_PERMISSION_MODE`, `JAVUK_DEBUG` (writes `~/.config/javuk/javuk.log`).
+| Variable | Purpose |
+|---|---|
+| `OPENROUTER_API_KEY` | OpenRouter API key |
+| `OPENAI_API_KEY` | OpenAI API key |
+| `ANTHROPIC_API_KEY` | Anthropic API key |
+| `OPENROUTER_BASE_URL` | OpenAI-compatible base URL |
+| `JAVUK_MODEL` | Default model identifier |
+| `JAVUK_PROVIDER` | Provider name |
+| `JAVUK_PERMISSION_MODE` | Interactive permission mode |
+| `JAVUK_DEBUG` | Enable file logging at `~/.config/javuk/javuk.log` |
 
-## How it works
+By default, file and search tools cannot access paths outside the working directory, and
+`WebFetch` rejects private, loopback, link-local, and non-HTTP targets. The related CLI
+options and configuration fields explicitly disable these protections.
 
-```mermaid
-flowchart LR
-    U[Your prompt] --> A[Agent loop]
-    A -->|messages + tool specs| L[LlmClient<br/>OpenAI-compatible]
-    L -->|stream: text + tool calls| A
-    A -->|dispatch| T[ToolRegistry]
-    T -->|mutating?| P{Permission}
-    P -->|allow| X[Tool executes]
-    P -->|deny| A
-    X -->|result| A
-    A -->|no more tool calls| R[Final answer]
+Mutating actions in interactive mode pass through the selected permission mode. Persistent
+allow rules are stored at `~/.config/javuk/allowlist.json`, and sessions are stored under
+`~/.config/javuk/sessions/`.
+
+Pre-tool hooks can block an action by returning a non-zero exit code. Hook commands receive
+the tool name and arguments through `JAVUK_TOOL` and `JAVUK_TOOL_ARGS`. Tools discovered
+from MCP servers are registered with names in the form `server__tool`.
+
+## Examples
+
+Use OpenAI:
+
+```sh
+export OPENAI_API_KEY="your-api-key"
+java --enable-preview --enable-native-access=ALL-UNNAMED \
+  -jar target/codecrafters-claude-code.jar \
+  --provider openai --model gpt-4o-mini
 ```
 
-The [`Agent`](src/main/java/dev/javuk/agent/Agent.java) asks the model, runs any
-tools it requests through the [`ToolRegistry`](src/main/java/dev/javuk/tools/ToolRegistry.java)
-(checking [permissions](src/main/java/dev/javuk/permission/) for mutating actions),
-appends the results to the [`Conversation`](src/main/java/dev/javuk/agent/Conversation.java),
-and repeats until the model returns a final answer. See [docs/ARCHITECTURE.md](docs/ARCHITECTURE.md).
+Use native Anthropic:
+
+```sh
+export ANTHROPIC_API_KEY="your-api-key"
+java --enable-preview --enable-native-access=ALL-UNNAMED \
+  -jar target/codecrafters-claude-code.jar \
+  --provider anthropic --model claude-sonnet-4-6
+```
+
+Use a local Ollama model:
+
+```sh
+java --enable-preview --enable-native-access=ALL-UNNAMED \
+  -jar target/codecrafters-claude-code.jar \
+  --provider ollama --model qwen2.5-coder
+```
+
+Create a project command by adding `.javuk/commands/review.md`:
+
+```md
+Review `$ARGUMENTS` for correctness issues and report findings with line references.
+```
+
+Run it in the REPL:
+
+```text
+/review src/main/java/Main.java
+```
 
 ## Development
 
+Build the project and assemble the executable jar:
+
 ```sh
-mvn -B package             # compile, test, and assemble the fat jar
-mvn -B test                # run the 41-test suite
-./your_program.sh -p "…"   # run via the CodeCrafters wrapper
+mvn -B package
 ```
 
-> Java 25 preview features are enabled; run with `--enable-preview`.
+Run the CodeCrafters-compatible wrapper:
 
-## Roadmap
+```sh
+./your_program.sh -p "Summarize the current project."
+```
 
-- [x] Subagents (`Task`) and parallel tool execution
-- [x] MCP (Model Context Protocol) tool support
-- [x] Diff preview before applying edits
-- [x] Hooks, custom commands, `@file` mentions, cancellable turns
-- [ ] Native Anthropic provider (in addition to OpenAI-compatible)
-- [ ] Streaming MCP transports (HTTP/SSE) in addition to stdio
-- [ ] Auto-compaction when the context window fills
+When adding a built-in tool, implement `dev.javuk.tools.Tool`, register it in
+`Tools.defaultRegistry()`, mark mutating behavior correctly, and add focused tests.
 
-## Acknowledgements
+## Testing
 
-Built on the [CodeCrafters](https://codecrafters.io) "Build your own Claude Code"
-challenge and the [openai-java](https://github.com/openai/openai-java) SDK. Inspired
-by [Claude Code](https://claude.com/claude-code).
+Run the test suite:
+
+```sh
+mvn -B test
+```
+
+The current suite contains 58 JUnit tests. CI runs `mvn -B package` for pushes and pull
+requests targeting `main` or `master`.
+
+## Contributing
+
+Contributions should be focused, include tests for behavior changes, and preserve the
+non-interactive `-p` contract. Run `mvn -B test` before opening a pull request.
+
+See [CONTRIBUTING.md](CONTRIBUTING.md) for project-specific guidance.
 
 ## License
 
-[MIT](LICENSE) © Usmonov Mahmudkhon
+Javuk is available under the [MIT License](LICENSE).
